# celect

./: .gitignore  Cargo.toml  README.md  benchmark.rs  breakdown.rs  build.rs  grammar.js
src/: binder.rs  config.rs  grammar.json  lib.rs  main.rs  node-types.json  optimizer.rs  parser.c  parser.rs  planner.rs
src/execution/: bitmap.rs  buffer_pool.rs  data_chunk.rs  executor.rs  mod.rs  physical_planner.rs
src/execution/operators/: aggregate.rs  filter.rs  limit.rs  mod.rs  projection.rs  scan.rs
tests/: binder_test.rs  count_test.rs  execution_test.rs  limit_offset_test.rs  optimizer_test.rs  parser_test.rs  planner_test.rs
