[package]
name = "celect"
version = "0.0.2"
edition = "2024"
default-run = "celect"

[[bin]]
name = "benchmark"
path = "benchmark.rs"

[[bin]]
name = "breakdown"
path = "breakdown.rs"

[dependencies]
tree-sitter = "0.21"
colored = "2.1"
csv = "1.3"
rustyline = "14.0"
ctrlc = "3.4"
comfy-table = "7.1"

[build-dependencies]
cc = "1.0"
